--- a/schritt03.html
+++ b/schritt03.html
@@ -12,7 +12,11 @@
     <header>
         <h1>Semantische Elemente</h1>
     </header>
-
+    <nav>
+        <ul>
+        <li><a href</li>
+            </ul>
+    </nav>
     <main>
         <div>
             <p>Lorem ipsum dolor <a href="https//google.com"target="_blank">Google</a> sit amet,<span> consectetuer adipiscing</span> elit. Aenean commodo ligula eget dolor. Aenean massa. <em>Cum sociis natoque</em> penatibus et magnis dis <strong>parturient montes</strong>, nascetur ridiculus mus.
@@ -21,9 +25,6 @@
             <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
             </p>
         </div>
-
-
-
     </main>
 
     <footer>
@@ -32,4 +33,5 @@
     </footer>
 
 
-</body></html>
+</body>
+</html>
